# axum_example

./: .gitignore  Cargo.toml
src/: main.rs
src/api/user/: api_params_example.rs  detail.rs  edit.rs  list.rs  login.rs  mod.rs  register.rs  role.rs  user_info.rs
src/config/: config.rs  logger.rs  mod.rs
src/data_store/: mod.rs
src/interfaces/: mod.rs
src/middle/: middle_error.rs  mod.rs  request_record.rs
src/router/: router.rs
src/utils/: mod.rs  request_adapter.rs  request_extend.rs  request_plugins.rs  response_adapter.rs
