[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

[dependencies]

fern = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
reqwest = { version = "0.12.9",features = ["json", "default-tls", "gzip", "stream"] }
futures-util = "0.3.30"
lazy_static = "1.4.0"
sea-orm = { version = "1.0.0",features = ["sqlx-sqlite", "runtime-tokio", "runtime-async-std"]  }
rand = "0.8.5"
tokio = {version = "1.40.0", features = ["full"] }
axum = {version = "0.8.1", features = ["default", "multipart", "tokio"] }
tower-http = {version = "0.6.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }