[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

[dependencies]

fern = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"  # 添加这一行
log = "0.4"
chrono = "0.4"
reqwest = { version = "0.12.9",features = ["json", "default-tls", "gzip", "stream"] }
futures-util = "0.3.30"
sea-orm = { version = "1.0.0",features = ["sqlx-all", "runtime-tokio", "runtime-async-std"]  }
tokio = {version = "1.40.0", features = ["full"] }
axum = {version = "0.8.1", features = ["default", "multipart", "tokio"] }
tower-http = {version = "0.6.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
multipart = "0.18.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
http-body-util = "0.1.3"
anyhow = {version = "1.0.87", features = ["default", "std", "backtrace"]}
walkdir="0.1.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
async-trait = "0.1.88"
hyper = "1.6.0"